--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,6 +32,7 @@ android {
 dependencies {
     implementation project(":domain")
     implementation project(":gateway")
+    implementation project(":camera")
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
