--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation "androidx.recyclerview:recyclerview:1.2.0-alpha06"
 
     // Navigation Graph
     def navVersion = "2.1.0"
