camera screen without requests is ready

--- a/iOS/iOS/Info.plist
+++ b/iOS/iOS/Info.plist
@@ -2,10 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>$(PRODUCT_NAME) photo use</string>
-	<key>Privacy - Camera Usage Description </key>
-	<string>$(PRODUCT_NAME) camera use</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Used to capture new image for photo effect</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Used to record a voice</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Used to record a voice</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
