--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -13,8 +13,7 @@ target 'iOS' do
   pod 'RxCocoa', '~> 4.5.0', :inhibit_warnings => true
   pod 'RxNetworkApiClient', '~> 0.1.3', :inhibit_warnings => true
   pod "SwiftyCam", :inhibit_warnings => true
-
-
+  pod "BSImagePicker", "~> 3.1", :inhibit_warnings => true
 
 
 end
