--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,10 +45,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation "androidx.recyclerview:recyclerview:1.2.0-alpha06"
 
-    // Navigation Graph
-    def navVersion = "2.1.0"
-    implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
-    implementation "androidx.navigation:navigation-ui-ktx:$navVersion"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.1"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.1"
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
