--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -9,12 +9,12 @@ android {
     buildToolsVersion "30.0.1"
 
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
         applicationId "ru.webant.openmeters"
-        minSdkVersion 23
+        minSdkVersion 24
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
