Убраны лишние виджеты

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".scenes.main.MainActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan|stateAlwaysVisible">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
