--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "rest api for meters",
   "main": "server.js",
   "scripts": {
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "gradolol4@gmail.com",
